<resources>
    <string name="app_name">Inspiraattori</string>
    <string name="annaNimi">Anna nimi</string>
    <string name="tallenna">Tallenna</string>
    <string name="aktiviteetti">Aktiviteetti</string>
    <string name="seuraava">Seuraava</string>
    <string name="edellinen">Edellinen</string>
    <string name="lista">Lista</string>
    <string name="title_activity_anna_nimi">Anna nimi</string>
    <string name="title_activity_detaalit">Detaalit</string>
    <string name="title_activity_lista">Lista</string>
    <string name="kysytaan">TextView</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="action_settings">action_settings</string>
</resources>